// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSidebarBrand customize 1`] = `
<div>
  <a
    class="sidebar-brand bazinga"
  >
    Test
  </a>
</div>
`;

exports[`loads and displays CSidebarBrand component 1`] = `
<div>
  <a
    class="sidebar-brand"
    color="primary"
  >
    Test
  </a>
</div>
`;
